# upwork-proposals

./: README.md  main.py  pyproject.toml
app/: main.py
app/core/: config.py  security.py
app/modules/: brain.py  collector.py  executor.py  notifier.py
app/schemas/: job.py
scripts/: poll_jobs.py  setup_auth.py
